--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
     <div class="section">
       <h2>Education</h2>
       <ul>
-        <li><b>MCA</b> – Pursuing (Expected 2025)</li>
+        <li><b>MCA</b> – 2025</li>
         <li><b>B.Sc in PMCS</b> – 2022</li>
       </ul>
     </div>
@@ -92,3 +92,4 @@
   </script>
 </body>
 </html>
+
