--- a/index.html
+++ b/index.html
@@ -43,10 +43,10 @@
       <h2>Project</h2>
       <ul>
         <li>
-          <b>Novel Deep Learning Architecture for Butterfly Classification</b><br>
-          - Developed a hybrid architecture combining EfficientNet deep learning features with handcrafted shape & color features.<br>
-          - Evaluated performance using accuracy, precision, recall, and F1-score.<br>
-          - Visualized results using confusion matrix and classification report.<br>
+          <b>Novel Deep Learning Architecture for Classification</b><br>
+          - Designed a hybrid model integrating multiple feature types for advanced classification tasks.<br>
+          - Conducted comprehensive performance evaluation using standard metrics..<br>
+          - Generated visual analyses to interpret and summarize model predictions.<br>
           - Tools & Technologies: Python, TensorFlow/Keras, PyTorch, OpenCV, TPOT, Matplotlib.
         </li>
       </ul>
@@ -92,4 +92,5 @@
   </script>
 </body>
 </html>
+
 
